tooling/nargo_cli/tests/snapshots/execution_failure/mocks_in_execution/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
Attempted to call disabled foreign call `create_mock`
