tooling/nargo_cli/tests/snapshots/execution_failure/mocks_in_execution/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:3:16
  │
3 │     let mock = unsafe { std::test::OracleMock::mock("foo") };
  │                ------ The comment must start with the "Safety: " word
  │

error: id is private and not visible from the current module
  ┌─ src/main.nr:4:20
  │
4 │     assert_eq(mock.id, 0);
  │                    -- id is private
  │

Aborting due to 1 previous error
